fix: make qulice pass in jcabi-heroku-maven-plugin
The tests were still on JUnit 4, which the parent no longer supplies,
so nothing compiled. They now use Jupiter and @TempDir, and jcabi-matchers
replaces the long-dead rexsl-test.

Hibernate Validator was declared under the wrong groupId, so the parent's
Jakarta-era version won instead and the @NotNull aspect found no provider
at all. The right artifact needs an EL implementation next to it.

Git no longer works inside its constructor: the SSH wrapper script is
written when a command actually runs, which is what lets exec() report
the failure honestly instead of hiding it.