@@ -5,56 +5,33 @@
 package com.jcabi.heroku.maven.plugin;
 
 import java.io.File;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang3.CharEncoding;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 /**
  * Test case for {@link Repo}.
- * @author Yegor Bugayenko (yegor@tpc2.com)
- * @version $Id$
+ * @since 0.4
  */
-public final class RepoTest {
+final class RepoTest {
 
-    /**
-     * Temporary folder.
-     * @checkstyle VisibilityModifier (3 lines)
-     */
-    @Rule
-    public transient TemporaryFolder temp = new TemporaryFolder();
-
-    /**
-     * Repo can add files to Git repo.
-     * @throws Exception If something is wrong
-     */
     @Test
-    public void addsFilesToSimpleGitRepo() throws Exception {
-        final File key = this.temp.newFile();
-        FileUtils.writeStringToFile(key, "");
-        final File folder = this.temp.newFolder();
-        final Git git = new Git(key, folder);
-        git.exec(
-            this.temp.newFolder(),
-            "init",
-            folder.getPath()
+    void addsFilesToSimpleGitRepo(@TempDir final Path temp) throws Exception {
+        final File folder = temp.resolve("repo").toFile();
+        final Git git = new Git(
+            Files.writeString(temp.resolve("key.pem"), "").toFile(),
+            folder
         );
-        final Repo repo = new Repo(git, folder);
+        git.exec(temp.toFile(), "init", folder.getPath());
         final String name = "extra.txt";
-        repo.add(name, "\u0433 text content!");
+        new Repo(git, folder).add(name, "г text content!");
         MatcherAssert.assertThat(
-            new File(folder, name).exists(),
-            Matchers.is(true)
-        );
-        MatcherAssert.assertThat(
-            FileUtils.readFileToString(
-                new File(folder, name), CharEncoding.UTF_8
-            ),
-            Matchers.startsWith("\u0433 text content")
+            "the file cannot lose its content on the way to the repo",
+            Files.readString(folder.toPath().resolve(name)),
+            Matchers.startsWith("г text content")
         );
     }
-
 }
